404-ingress-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-default
  namespace: app-space
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-default
  template:
    metadata:
      labels:
        app: webapp-default
    spec:
      containers:
      - image: kodekloud/ecommerce:404
        name: webapp-default
        ports:
        - containerPort: 8080
          protocol: TCP
