blue-depolyment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blue-app
      colour: blue
  template:
    metadata:
      labels:
        app: blue-app
        colour: blue
    spec:
      containers:
      - name: blue-container
        image: linuxacademycontent/ckad-nginx:blue
        ports:
        - containerPort: 80
