canary-environment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: testing
      environment: canary
  template:
    metadata:
      labels:
        name: testing
        environment: canary
    spec:
      containers:
      - name: main-container
        image: linuxacademycontent/ckad-nginx:canary
        ports:
        - containerPort: 80
