deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployments
spec:
  replicas: 5
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: deploy-pod
      labels:
        app: frontend
    spec:
      containers:
      - name: deploy-container
        image: nginx
        ports:
        - containerPort: 80
