food-ingress-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-food
  namespace: app-space
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-food
  strategy:
  template:
    metadata:
      labels:
        app: webapp-food
    spec: 
      containers:
      - image: kodekloud/ecommerce:food
        name: webapp-food 
        ports: 
        - containerPort: 8080
          protocol: TCP
