green-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: green-app
      colour: green
  template:
    metadata:
      labels:
        app: green-app
        colour: green
    spec:
      containers:
      - name: green-container
        image: linuxacademycontent/ckad-nginx:green
        ports:
        - containerPort: 80
