mainambossador.yml
apiVersion: v1
kind: Pod
metadata:
  name: main-ambossador
spec:
  containers:
  - name: main-con
    image: radial/busyboxplus:curl
    command: ['sh','-c','while true; do curl localhost:8080; sleep 5 ; done']
  - name: ambossador-container
    image: haproxy:2.4 
    volumeMounts:
    - name: shared-volume
      mountPath: /usr/local/etc/haproxy
  volumes:
  - name: shared-volume
    configMap:
      name: haproxy-config
