probe_delay_app.yml
apiVersion: v1
kind: Pod
metadata:
  name: delayed-pod
  labels:
    app: production
    tier: development
spec:
  containers:
  - name: delayed-container
    image: kodekloud/webapp-delayed-start
    ports: 
    - containerPort: 8080
      protocol: TCP
    readinessProbe:
      httpGet: 
        path: /ready
        port: 8080
    livenessProbe:
      httpGet:
        path: /live
        port: 8080
      periodSeconds: 5
      initialDelaySeconds: 120
