ready_liveness.yml
apiVersion: v1
kind: Pod
metadata:
  name: testing-development-app
  labels:
    app: production
    tier: development
spec:
  containers:
  - name: probe-container
    image: kodekloud/webapp-delayed-start
    ports: 
    - containerPort: 8080
      protocol: TCP
    livenessProbe:
      httpGet:
        path: /live
        port: 8080
      periodSeconds: 5
