rollout.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testing-rollout
spec:
  replicas: 5
  selector:
    matchLabels:
      tier: backend
  template:
    metadata:
      labels:
        tier: backend
    spec:
      containers:
      - name: roll-container
        image: nginx
        ports:
        - containerPort: 80
