404-clusterip-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: default-svc
  namespace: app-space
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: webapp-default
  type: ClusterIP
