ambassodar.yml
apiVersion: v1
kind: Pod
metadata:
  name: ambossadr-pod
  labels:
    name: testing
spec:
  containers:
  - name: amb-con
    image: nginx:stable
    ports:
    - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: ambossadr-service
spec:
  selector:
    name: testing
  ports:
  - protocol: TCP
    port: 8081 
    targetPort: 80
