bluegreen-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: bluegreen-service
spec:
  selector:
    app: blue-app
    colour: blue
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
