canary-service.yml
apiVersion: v1
kind: Service
metadata:
  name: canary-service
spec:
  selector:
    name: testing
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
