svc_ready_liveness.yml
apiVersion: v1
kind: Service
metadata:
  name: prode-service
spec:
  ports:
  - nodePort: 30080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: production
    tier: development
  type: NodePort
