ingress-resources.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: wear-watch-food-ingress
  namespace: app-space
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: wear-service
            port:
              number: 8080
        path: /wear
        pathType: Prefix
      - backend:
         service:
           name: video-service
           port:
             number: 8080
        path: /watch
        pathType: Prefix
      - backend:
          service:
            name: food-service
            port:
              number: 8080
        path: /food
        pathType: Prefix
  defaultBackend:
    service:
      name: default-svc
      port:
        number: 8080
